--- a/DejaBrew/build.gradle
+++ b/DejaBrew/build.gradle
@@ -11,9 +11,12 @@ sourceCompatibility = '1.8'
 repositories {
 	mavenCentral()
 }
-
+ext {
+  junit5Version = "5.4.2"
+  }
 dependencies {
 	compile project(':JPADejaBrew')
+	testImplementation("org.junit.jupiter:junit-jupiter:$junit5Version")
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	runtimeOnly 'mysql:mysql-connector-java'
