--- a/DejaBrew/src/main/resources/application.properties
+++ b/DejaBrew/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=8087
 
 #### JSP VIEW RESOLVER ####
 ##### Include if you used a ViewResolver to shorten the names of your views
-spring.mvc.view.prefix: /WEB-INF/
+spring.mvc.view.prefix: /WEB-INF/brewery/
 spring.mvc.view.suffix: .jsp
 
 
