--- a/DejaBrew/build.gradle
+++ b/DejaBrew/build.gradle
@@ -26,4 +26,5 @@ dependencies {
 	compile group: 'jstl', name: 'jstl', version: '1.2'
     compile group: 'javax.servlet.jsp', name: 'javax.servlet.jsp-api', version: '2.3.1'
     compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-jasper', version: '8.5.23'
+	compile group: 'org.springframework.security', name: 'spring-security-taglibs', version: '5.1.6.RELEASE' 
 }
