--- a/DejaBrew/build.gradle
+++ b/DejaBrew/build.gradle
@@ -4,6 +4,13 @@ plugins {
 	id 'java'
 }
 
+apply plugin: 'war'
+war {
+  enabled = true
+  archiveName = "${baseName}.war"     // Our app name, as defined in settings.gradle
+  destinationDir = file("./")         // Project root directory
+}
+
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
@@ -26,5 +33,7 @@ dependencies {
 	compile group: 'jstl', name: 'jstl', version: '1.2'
     compile group: 'javax.servlet.jsp', name: 'javax.servlet.jsp-api', version: '2.3.1'
     compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-jasper', version: '8.5.23'
-	compile group: 'org.springframework.security', name: 'spring-security-taglibs', version: '5.1.6.RELEASE' 
+	compile group: 'org.springframework.security', name: 'spring-security-taglibs', version: '5.1.6.RELEASE'
+	implementation ('org.springframework.boot:spring-boot-starter-tomcat')
+	 
 }
